test/indexOutOfBounds3.slq
// args: --run
// TODO: nicer error message

def main(){
	x:=[1,2,3];
	x[-1]=2; // error
}
